@@ -1,5 +1,9 @@
 2004-12-15 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/Dialog_Partition_Copy: fixed small error with incorrect display of used space and did some cleanups.
+
+2004-12-15 Bart Hakvoort  <gparted@users.sf.net>
+
 	* Refined checks for functionality a bit. e.g. even if a filesystem can't be read, it's still possible to grow it 
 	  (but shrinking gets disabled). Also removed that stupid grow_only flag from Utils.h and reordered Win_GParted::Set_Valid_Operations()
 
